# OptFoundry

./: .copilot-codeGeneration-instructions-python.md  .copilot-commit-message-instructions.md  .gitignore  README.md  main.py  pyproject.toml
src/optfoundry/: __init__.py
