[project]
name = "optfoundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
optfdr = "optfoundry:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[build-system]
requires = ["uv_build>=0.7.16,<0.8.0"]
build-backend = "uv_build"